2009-03-26  Johannes Schmid  <jhs@gnome.org>

	* projects.gnome.org/anjuta/Makefile.am:
	* projects.gnome.org/anjuta/css/Makefile.am:
	* projects.gnome.org/anjuta/css/docs.css:
	* projects.gnome.org/anjuta/css/layout.css:
	* projects.gnome.org/anjuta/css/style.css:
	* projects.gnome.org/anjuta/development.html:
	* projects.gnome.org/anjuta/downloads.html:
	* projects.gnome.org/anjuta/features.html:
	* projects.gnome.org/anjuta/index.html:
	* projects.gnome.org/anjuta/layout.shtml:
	Moved anjuta website from svn:extenals here

2009-03-25  Johannes Schmid  <jhs@gnome.org>

	* configure.in: Retry anjuta homepage with static html

2009-03-25  Johannes Schmid  <jhs@gnome.org>

	* configure.in: Integrated magpie rss feed into anjuta's web

2009-03-25  Johannes Schmid  <jhs@gnome.org>

	* configure.in:
	Added anjuta project and fixed build

2009-03-25  Andre Klapper  <a9016009@gmx.de>

	* projects.gnome.org/libchamplain/index.html:
	Fix wrong bug report link. Fixes bug #576713.

2009-03-18  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml: oops, fix splash image size

2009-03-18  Vincent Untz  <vuntz@gnome.org>

	* include/evilsedhack:
	* projects.gnome.org/index.html: update copyright years
	* www.gnome.org/htaccess:
	* www.gnome.org/img/flash/Makefile.am:
	* www.gnome.org/img/flash/two-twenty-six.png:
	* www.gnome.org/index.wml:
	* www.gnome.org/start/index.wml: GNOME 2.26.0!

2009-03-17  daniel g. siegel <dgsiegel@gmail.com>

	* projects.gnome.org/cheese/download.html,
	  projects.gnome.org/cheese/index.html,
	  projects.gnome.org/cheese/tour.html: 
	  populate the cheese 2.26.0 release

2009-03-15  Frederic Peters  <fpeters@0d.be>

	* www.gnome.org/htaccess: swapped more RedirectMatch lines so
	2.1[02468] are also properly redirected to the release notes.

2009-03-15  Frederic Peters  <fpeters@0d.be>

	* www.gnome.org/htaccess: swapped RedirectMatch lines that caused the
	2.24 start page to redirect to the 2.2 release notes.
