@@ -18,6 +18,7 @@ www.gnome.org/about/Makefile
 www.gnome.org/community/Makefile
 www.gnome.org/css/Makefile
 www.gnome.org/friends/Makefile
+www.gnome.org/friends/banners/Makefile
 www.gnome.org/friends/css/Makefile
 www.gnome.org/friends/images/Makefile
 www.gnome.org/friends/js/Makefile
