@@ -1,0 +1,16 @@
+SUBDIRS =
+
+urlpath = /friends/banners
+
+page_DATA = \
+	associate.png \
+	friends-of-gnome.png \
+	gnome-lover.png \
+	monthly.png \
+	philanthropist.png \
+	sponsor.png \
+	support-gnome.png
+	
+EXTRA_DIST=$(page_DATA)
+
+include $(top_srcdir)/rules.common
