@@ -30,5 +30,19 @@
 <p>Stormy Peters<br/>
 Executive Director</p>
 
+<h2>Spread the word about Friends of GNOME</h2>
+
+<p>Add one of those banners to your website:</p>
+
+<p>
+<img src="banners/friends-of-gnome.png" hspace="3" alt="Friends of GNOME"/><br/>
+<img src="banners/monthly.png" align="left" hspace="3" alt="Friend of GNOME Monthly Donor"/>
+<img src="banners/associate.png" alt="Friends of GNOME Associate"/><br/> 
+<img src="banners/sponsor.png" align="left" hspace="3" alt="Friend of GNOME Sponsor"/>
+<img src="banners/philanthropist.png" alt="Friend of GNOME Philanthropist"/><br/>
+<img src="banners/gnome-lover.png" align="left" hspace="3" alt="GNOME Lover"/>
+<img src="banners/support-gnome.png" alt="Support GNOME"/><br/>
+</p>
+
 </body>
 </html>
