@@ -1,3 +1,8 @@
+2009-03-27  Lucas Rocha  <lucasr@gnome.org>
+
+	* www.gnome.org/friends/thank-you.wml: mention the FoG banners.
+	* www.gnome.org/friends/banners/*: add banners.
+
 2009-03-26  Johannes Schmid  <jhs@gnome.org>
 
 	* projects.gnome.org/anjuta/Makefile.am:
